--- a/WebContent/view/order.html
+++ b/WebContent/view/order.html
@@ -282,7 +282,7 @@
         <div class="span3" id="sidebar">
             <ul class="nav nav-list bs-docs-sidenav nav-collapse text-center">
                 <li>
-                    <a href="index.html"><i class="icon-chevron-right"></i> 我的商品</a>
+                    <a href="ucenter.html"><i class="icon-chevron-right"></i> 我的商品</a>
                 </li>
                 <li class="myactive">
                     <a href="order.html"><i class="icon-chevron-right"></i> 我的订单</a>
