--- a/WebContent/view/ucenter.html
+++ b/WebContent/view/ucenter.html
@@ -103,16 +103,6 @@
 									</div>
 								</div>
 							</div>
-							<script src="js/easyResponsiveTabs.js" type="text/javascript"></script>
-							<script type="text/javascript">
-                                $(document).ready(function () {
-                                    $('#horizontalTab').easyResponsiveTabs({
-                                        type: 'default', //Types: default, vertical, accordion
-                                        width: 'auto', //auto or any width like 600px
-                                        fit: true   // 100% fit in a container
-                                    });
-                                });
-							</script>
 							<div id="OR" class="hidden-xs">OR</div>
 						</div>
 						<div class="col-md-4 modal_body_right modal_body_right1">
@@ -183,7 +173,7 @@
 				<div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
 					<ul class="nav navbar-nav">
 						<li style="visibility:hidden;"><a href="mail.html">联系我们</a></li>
-						<li><a href="index.html" class="act">首页</a></li>
+						<li><a href="index.html">首页</a></li>
 						<!-- Mega Menu -->
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">所有分类 <b class="caret"></b></a>
@@ -250,7 +240,7 @@
 								</div>
 							</ul>
 						</li>
-						<li><a href="ucenter.html">个人中心</a></li>
+						<li><a href="ucenter.html" class="act">个人中心</a></li>
 						<li><a href="mail.html">联系我们</a></li>
 						<li style="visibility:hidden;"><a href="mail.html">联系我们</a></li>
 					</ul>
@@ -270,8 +260,8 @@
 	<div class="breadcrumb_dress">
 		<div class="container">
 			<ul>
-				<li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a> <i>/</i></li>
-				<li>Person Center</li>
+				<li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 首页</a> <i>/</i></li>
+				<li>个人中心</li>
 			</ul>
 		</div>
 	</div>
@@ -282,7 +272,7 @@
 			<div class="span3" id="sidebar">
 				<ul class="nav nav-list bs-docs-sidenav nav-collapse text-center">
 					<li class="myactive">
-						<a href="index.html"><i class="icon-chevron-right"></i> 我的商品</a>
+						<a href="ucenter.html"><i class="icon-chevron-right"></i> 我的商品</a>
 					</li>
 					<li>
 						<a href="order.html"><i class="icon-chevron-right"></i> 我的订单</a>
@@ -299,6 +289,10 @@
 					<div class="block">
 						<div class="navbar myTableLable block-header">
 							<div class="muted pull-left">商品列表</div>
+							<div class="muted pull-right" style="margin-top: 4px !important;padding: 6px; margin-bottom: 4px; border: 1px solid #dddddd; border-radius: 4px;">
+								<!--<button class="btn btn-default btn-sm">添加商品</button>-->
+								<a href="#" data-toggle="modal" data-target="#addGoodModal">添加商品</a>
+							</div>
 						</div>
 						<div class="block-content collapse in"><!-- collapse in -->
 							<!--<div class="span12">-->
@@ -321,7 +315,7 @@
 										<td>@mdo</td>
 										<td>Otto</td>
 										<td>
-											<button class="btn btn-xs btn-warning">修改</button>
+											<button class="btn btn-xs btn-warning" data-toggle="modal" data-target="#modifyGoodModal">修改</button>
 											<button class="btn btn-xs btn-danger">下架</button>
 										</td>
 									</tr>
@@ -346,6 +340,152 @@
 			</div>
 		</div>
 	</div>
+	<!-- add Good Modal-->
+	<div class="modal video-modal fade" id="addGoodModal" tabindex="-1" role="dialog" aria-labelledby="addGoodModal">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				</div>
+				<section>
+					<div class="modal-body">
+						<form class="form-horizontal">
+							<div class="col-md-5"><!--modal_body_left-->
+								<img src="images/default.png" alt=" " class="img-responsive" width="200" height="200" style="margin: 0 auto;"/>
+								<!--<div style="margin: 0 auto;" class="clearfix">-->
+									<img src="images/default.png" alt=" " class="img-responsive pull-left" width="60" height="60" style="margin-left: 40px;margin-right: 8px;"/>
+									<img src="images/default.png" alt=" " class="img-responsive pull-left" width="60" height="60" style="margin-right: 8px;"/>
+									<img src="images/default.png" alt=" " class="img-responsive pull-left" width="60" height="60" style="margin-right: 8px;"/>
+									<img src="images/default.png" alt=" " class="img-responsive pull-left" width="60" height="60" style=""/>
+									<button class="btn btn-primary" style="position: relative; left: 133px; bottom: -37px; height:28px;line-height: 16px;">上传图片</button>
+									<input type="file" style="position: relative; left: 134px; bottom: -9px;opacity: 0;height:30px;">
+								<!--</div>-->
+							</div>
+							<div class="col-md-7 modal_body_right">
+								<div class="form-group">
+									<label for="goodName" class="col-sm-3 control-label">商品名称</label>
+									<div class="col-sm-9">
+										<input type="text" class="form-control" id="goodName">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="goodType" class="col-sm-3 control-label">所属品牌</label>
+									<div class="col-sm-9">
+										<select class="form-control" id="goodType">
+											<option value="1">苹果</option>
+											<option value="2">小米</option>
+											<option value="3">OPPO</option>
+											<option value="4">VIVO</option>
+											<option value="5">三星</option>
+											<option value="6">其他</option>
+										</select>
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="goodPrice" class="col-sm-3 control-label">价格</label>
+									<div class="col-sm-9">
+										<input type="text" class="form-control" id="goodPrice">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="goodDegree" class="col-sm-3 control-label">程度类型</label>
+									<div class="col-sm-9">
+										<select class="form-control" id="goodDegree">
+											<option>99新</option>
+											<option>9成新</option>
+											<option>88新</option>
+											<option>8成新</option>
+											<option>7成新</option>
+										</select>
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="col-sm-offset-3 col-sm-9">
+										<button type="submit" class="btn btn-success col-sm-12">添加</button>
+									</div>
+								</div>
+							</div>
+							<div class="clearfix"> </div>
+						</form>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+	<!-- //add Good Modal-->
+	<!-- modify Good Modal-->
+	<div class="modal video-modal fade" id="modifyGoodModal" tabindex="-1" role="dialog" aria-labelledby="modifyGoodModal">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				</div>
+				<section>
+					<div class="modal-body">
+						<form class="form-horizontal">
+							<div class="col-md-5"><!--modal_body_left-->
+								<img src="images/default.png" alt=" " class="img-responsive" width="200" height="200" style="margin: 0 auto;"/>
+								<!--<div style="margin: 0 auto;" class="clearfix">-->
+								<img src="images/default.png" alt=" " class="img-responsive pull-left" width="60" height="60" style="margin-left: 40px;margin-right: 8px;"/>
+								<img src="images/default.png" alt=" " class="img-responsive pull-left" width="60" height="60" style="margin-right: 8px;"/>
+								<img src="images/default.png" alt=" " class="img-responsive pull-left" width="60" height="60" style="margin-right: 8px;"/>
+								<img src="images/default.png" alt=" " class="img-responsive pull-left" width="60" height="60" style=""/>
+								<button class="btn btn-primary" style="position: relative; left: 133px; bottom: -37px; height:28px;line-height: 16px;">上传图片</button>
+								<input type="file" style="position: relative; left: 134px; bottom: -9px;opacity: 0;height:30px;">
+								<!--</div>-->
+							</div>
+							<div class="col-md-7 modal_body_right">
+								<div class="form-group">
+									<label for="goodName" class="col-sm-3 control-label">商品名称</label>
+									<div class="col-sm-9">
+										<input type="text" class="form-control" id="goodName">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="goodType" class="col-sm-3 control-label">所属品牌</label>
+									<div class="col-sm-9">
+										<select class="form-control" id="goodType">
+											<option value="1">苹果</option>
+											<option value="2">小米</option>
+											<option value="3">OPPO</option>
+											<option value="4">VIVO</option>
+											<option value="5">三星</option>
+											<option value="6">其他</option>
+										</select>
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="goodPrice" class="col-sm-3 control-label">价格</label>
+									<div class="col-sm-9">
+										<input type="text" class="form-control" id="goodPrice">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="goodDegree" class="col-sm-3 control-label">程度类型</label>
+									<div class="col-sm-9">
+										<select class="form-control" id="goodDegree">
+											<option>99新</option>
+											<option>9成新</option>
+											<option>88新</option>
+											<option>8成新</option>
+											<option>7成新</option>
+										</select>
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="col-sm-offset-3 col-sm-9">
+										<button type="submit" class="btn btn-success col-sm-12">修改</button>
+									</div>
+								</div>
+							</div>
+							<div class="clearfix"> </div>
+						</form>
+					</div>
+				</section>
+			</div>
+		</div>
+	</div>
+	<!-- //modify Good Modal-->
 	<!-- //about --> 
 	<!-- team -->
 	<!--<div class="team">
@@ -496,11 +636,14 @@
 	<script src="vendors/jquery-1.9.1.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="vendors/easypiechart/jquery.easy-pie-chart.js"></script>
+	<script src="js/easyResponsiveTabs.js"></script>
 	<script src="assets/scripts.js"></script>
 	<script>
         $(function() {
             // Easy pie charts
             $('.chart').easyPieChart({animate: 1000});
+            //$('#horizontalTab').easyResponsiveTabs();
+            console.log($.easyResponsiveTabs());
         });
 	</script>
 	<!-- //cart-js --> 
