前台用户中心-个人信息完成 前台用户中心-我的商品获取品牌完成

--- a/WebContent/view/order.html
+++ b/WebContent/view/order.html
@@ -270,8 +270,8 @@
 <div class="breadcrumb_dress">
     <div class="container">
         <ul>
-            <li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a> <i>/</i></li>
-            <li>Person Center</li>
+            <li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 首页</a> <i>/</i></li>
+            <li>我的订单</li>
         </ul>
     </div>
 </div>
@@ -493,7 +493,7 @@
     </div>
 </div>
 <!-- //footer -->
-<script src="vendors/jquery-1.9.1.min.js"></script>
+<!-- <script src="vendors/jquery-1.9.1.min.js"></script> -->
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="vendors/easypiechart/jquery.easy-pie-chart.js"></script>
 <script src="assets/scripts.js"></script>
