--- a/WebContent/view/mail.html
+++ b/WebContent/view/mail.html
@@ -261,8 +261,8 @@
 	<div class="breadcrumb_dress">
 		<div class="container">
 			<ul>
-				<li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a> <i>/</i></li>
-				<li>Mail Us</li>
+				<li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 首页</a> <i>/</i></li>
+				<li>联系我们</li>
 			</ul>
 		</div>
 	</div>
