--- a/WebContent/view/ucenter.html
+++ b/WebContent/view/ucenter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>About</title>
+<title>UCenter</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -17,14 +17,15 @@
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <!-- //font-awesome icons -->
 <!-- js -->
-<script src="js/jquery.min.js"></script>
+<!-- <script src="js/jquery.min.js"></script> -->
+<script src="vendors/jquery-1.9.1.min.js"></script>
 <!-- //js -->  
 <!-- web fonts
 <link href='http://fonts.googleapis.com/css?family=Glegoo:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 <!-- //web fonts --> 
 <!-- for bootstrap working -->
-<script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script>
+<!-- <script type="text/javascript" src="js/bootstrap-3.1.1.min.js"></script> -->
 <!-- //for bootstrap working -->
 <!-- Bootstrap -->
 <!--<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">-->
@@ -43,14 +44,6 @@
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 
 <!-- start-smooth-scrolling -->
-<script type="text/javascript">
-	jQuery(document).ready(function($) {
-		$(".scroll").click(function(event){		
-			event.preventDefault();
-			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
-		});
-	});
-</script>
 <!-- //end-smooth-scrolling --> 
 </head> 
 <body> 
@@ -103,6 +96,16 @@
 									</div>
 								</div>
 							</div>
+							<script src="js/easyResponsiveTabs.js" type="text/javascript"></script>
+							<script type="text/javascript">
+                                $(document).ready(function () {
+                                    $('#horizontalTab').easyResponsiveTabs({
+                                        type: 'default', //Types: default, vertical, accordion
+                                        width: 'auto', //auto or any width like 600px
+                                        fit: true   // 100% fit in a container
+                                    });
+                                });
+							</script>
 							<div id="OR" class="hidden-xs">OR</div>
 						</div>
 						<div class="col-md-4 modal_body_right modal_body_right1">
@@ -261,7 +264,7 @@
 		<div class="container">
 			<ul>
 				<li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 首页</a> <i>/</i></li>
-				<li>个人中心</li>
+				<li>我的商品</li>
 			</ul>
 		</div>
 	</div>
@@ -372,12 +375,12 @@
 									<label for="goodType" class="col-sm-3 control-label">所属品牌</label>
 									<div class="col-sm-9">
 										<select class="form-control" id="goodType">
-											<option value="1">苹果</option>
+											<!-- <option value="1">苹果</option>
 											<option value="2">小米</option>
 											<option value="3">OPPO</option>
 											<option value="4">VIVO</option>
 											<option value="5">三星</option>
-											<option value="6">其他</option>
+											<option value="6">其他</option> -->
 										</select>
 									</div>
 								</div>
@@ -436,15 +439,15 @@
 							</div>
 							<div class="col-md-7 modal_body_right">
 								<div class="form-group">
-									<label for="goodName" class="col-sm-3 control-label">商品名称</label>
+									<label for="goodName1" class="col-sm-3 control-label">商品名称</label>
 									<div class="col-sm-9">
-										<input type="text" class="form-control" id="goodName">
+										<input type="text" class="form-control" id="goodName1">
 									</div>
 								</div>
 								<div class="form-group">
-									<label for="goodType" class="col-sm-3 control-label">所属品牌</label>
+									<label for="goodType1" class="col-sm-3 control-label">所属品牌</label>
 									<div class="col-sm-9">
-										<select class="form-control" id="goodType">
+										<select class="form-control" id="goodType1">
 											<option value="1">苹果</option>
 											<option value="2">小米</option>
 											<option value="3">OPPO</option>
@@ -455,15 +458,15 @@
 									</div>
 								</div>
 								<div class="form-group">
-									<label for="goodPrice" class="col-sm-3 control-label">价格</label>
+									<label for="goodPrice1" class="col-sm-3 control-label">价格</label>
 									<div class="col-sm-9">
-										<input type="text" class="form-control" id="goodPrice">
+										<input type="text" class="form-control" id="goodPrice1">
 									</div>
 								</div>
 								<div class="form-group">
-									<label for="goodDegree" class="col-sm-3 control-label">程度类型</label>
+									<label for="goodDegree1" class="col-sm-3 control-label">程度类型</label>
 									<div class="col-sm-9">
-										<select class="form-control" id="goodDegree">
+										<select class="form-control" id="goodDegree1">
 											<option>99新</option>
 											<option>9成新</option>
 											<option>88新</option>
@@ -487,78 +490,6 @@
 	</div>
 	<!-- //modify Good Modal-->
 	<!-- //about --> 
-	<!-- team -->
-	<!--<div class="team">
-		<div class="container">
-			<h3>Meet Our Team</h3>
-			<div class="wthree_team_grids">
-				<div class="col-md-3 wthree_team_grid">
-					<img src="images/t4.png" alt=" " class="img-responsive" />
-					<h4>Smith Allen <span>Manager</span></h4>
-					<div class="agileits_social_button">
-						<ul>
-							<li><a href="#" class="facebook"> </a></li>
-							<li><a href="#" class="twitter"> </a></li>
-							<li><a href="#" class="google"> </a></li>
-							<li><a href="#" class="pinterest"> </a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3 wthree_team_grid">
-					<img src="images/t5.png" alt=" " class="img-responsive" />
-					<h4>Laura James <span>Designer</span></h4>
-					<div class="agileits_social_button">
-						<ul>
-							<li><a href="#" class="facebook"> </a></li>
-							<li><a href="#" class="twitter"> </a></li>
-							<li><a href="#" class="google"> </a></li>
-							<li><a href="#" class="pinterest"> </a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3 wthree_team_grid">
-					<img src="images/t6.png" alt=" " class="img-responsive" />
-					<h4>Crisp Doe <span>Director</span></h4>
-					<div class="agileits_social_button">
-						<ul>
-							<li><a href="#" class="facebook"> </a></li>
-							<li><a href="#" class="twitter"> </a></li>
-							<li><a href="#" class="google"> </a></li>
-							<li><a href="#" class="pinterest"> </a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-3 wthree_team_grid">
-					<img src="images/t7.png" alt=" " class="img-responsive" />
-					<h4>Linda Rosy <span>Quality Checker</span></h4>
-					<div class="agileits_social_button">
-						<ul>
-							<li><a href="#" class="facebook"> </a></li>
-							<li><a href="#" class="twitter"> </a></li>
-							<li><a href="#" class="google"> </a></li>
-							<li><a href="#" class="pinterest"> </a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-				<p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
-					voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
-					repellat.</p>
-			</div>
-		</div>
-	</div>-->
-	<!-- //team -->
-	<!-- team-bottom -->
-	<!--<div class="team-bottom">
-		<div class="container">
-			<h3>Are You Ready For Deals? Flat <span>30% Offer </span>on Mobiles</h3>
-			<p>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
-				voluptatibus maiores alias consequatur aut perferendis doloribus asperiores 
-				repellat.</p>
-			<a href="products.html">Shop Now</a>
-		</div>
-	</div>-->
-	<!-- //team-bottom -->
 	<!-- newsletter -->
 	<div class="newsletter">
 		<div class="container">
@@ -633,18 +564,43 @@
 		</div>
 	</div>
 	<!-- //footer -->  
-	<script src="vendors/jquery-1.9.1.min.js"></script>
+	<!-- <script src="vendors/jquery-1.9.1.min.js"></script> -->
 	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="vendors/easypiechart/jquery.easy-pie-chart.js"></script>
-	<script src="js/easyResponsiveTabs.js"></script>
 	<script src="assets/scripts.js"></script>
 	<script>
         $(function() {
             // Easy pie charts
             $('.chart').easyPieChart({animate: 1000});
-            //$('#horizontalTab').easyResponsiveTabs();
-            console.log($.easyResponsiveTabs());
+            $(".scroll").click(function(event){		
+    			event.preventDefault();
+    			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+    		});
+            getBrand();
         });
+        function getBrand(){
+        	$.ajax({
+        		type:"get",
+        		async:true,
+        		url:"../brand/list.action",
+        		dataType:"json",
+        		data:{},
+        		success:function(data){
+        			console.log(data);
+        			if(data.status == 'success'){
+       					var rows = [];
+           				rows = data.data;
+           				var html = "";
+           				for(var i = 0 ; i < rows.length ; i++){
+           					html += '<option value="'+rows[i].bId+'">'+rows[i].bDescribe+'</option>';
+           				}
+           				$('#goodType').empty().append(html);
+        			}else{
+        				//没有数据或服务器错误
+        			}
+        		}
+        	});
+        }
 	</script>
 	<!-- //cart-js --> 
 </body>
