--- a/WebContent/view/userinfo.html
+++ b/WebContent/view/userinfo.html
@@ -579,7 +579,7 @@
     </div>
 </div>
 <!-- //footer -->
-<script src="vendors/jquery-1.9.1.min.js"></script>
+<!-- <script src="vendors/jquery-1.9.1.min.js"></script> -->
 <script src="js/ajaxfileupload.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <script src="vendors/easypiechart/jquery.easy-pie-chart.js"></script>
